[project]
name = "multistock"
version = "0.1.0"
description = "Multi Stock Portfolio OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "openai>=1.20.0",
    "requests"
]

[project.scripts]
server = "server.app:main"
